--- a/index.html
+++ b/index.html
@@ -1,10 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Libros electronicos</title>
-</head>
-<body>
+    <head>
+        <meta charset="UTF-8">
+        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="styles.css">
+        <title>Libros electronicos</title>
 
+    </head>
+
+    <header>
+        <!-- navigation bar -->
+        <nav>
+            <ul>
+                <li>
+                    <div class="left__part">
+                        <a href="" class="home">Colegio Montano</a>
+                        <h6 class="text">Libros electrónicos</h6>
+                    </div>
+                </li>
+
+                <!------------------------- navigation bar ----------------------------->
+                <li>
+                    <div class="right__part">
+                        <a href="" class="name">John Doe</a>
+                        <a href="" class="passwords"> Contraseñas</a>
+                    </div>
+
+
+                </li>
+            </ul>
+        </nav>
+    </header>
+
+<body>
 </body>
 </html>
