--- a/index.html
+++ b/index.html
@@ -12,22 +12,11 @@
         <!-- navigation bar -->
         <nav>
             <ul>
-                <li>
-                    <div class="left__part">
-                        <a href="" class="home">Colegio Montano</a>
-                        <h6 class="text">Libros electrónicos</h6>
-                    </div>
-                </li>
+                <li><a href="">Colegio Montano</a></li>
+                <li><a href="">Libros electronicos</a></li>
+                <li><a href="">Constraseñas </a> </li>
+                <li><a href="">John Doe</a></li>
 
-                <!------------------------- navigation bar ----------------------------->
-                <li>
-                    <div class="right__part">
-                        <a href="" class="name">John Doe</a>
-                        <a href="" class="passwords"> Contraseñas</a>
-                    </div>
-
-
-                </li>
             </ul>
         </nav>
     </header>
