--- a/index.html
+++ b/index.html
@@ -12,15 +12,40 @@
         <!-- navigation bar -->
         <nav>
             <ul>
-                <li><a href="">Colegio Montano</a></li>
-                <li><a href="">Libros electronicos</a></li>
-                <li><a href="">Constraseñas </a> </li>
-                <li><a href="">John Doe</a></li>
+                <li>
+                    <div class="home__container">
+                        <a href="" class="home">Colegio Montano</a>
+                    </div>
 
+                    <div class="text__container">
+                        <h6 class="text">Libros electrónicos</h6>
+                    </div>
+                </li>
+                <li>
+                    <div class="name__container">
+                        <a href="" class="name">John Doe</a>
+
+                    </div>
+
+                    <div class="pass__container">
+                        <a href="" class="passwords"> Contraseñas</a>
+                    </div>
+                </li>
             </ul>
         </nav>
     </header>
 
+
 <body>
+<div class="sidebar">
+    <a href="#home"><i class="fa fa-fw fa-home"></i> Home</a>
+    <a href="#services"><i class="fa fa-fw fa-wrench"></i> Services</a>
+    <a href="#clients"><i class="fa fa-fw fa-user"></i> Clients</a>
+    <a href="#contact"><i class="fa fa-fw fa-envelope"></i> Contact</a>
+</div>
+
+
+</div>
+
 </body>
 </html>
