shadow and grades list almost ready :3

--- a/index.html
+++ b/index.html
@@ -37,15 +37,25 @@
 
 
 <body>
-<div class="sidebar">
-    <a href="#home"><i class="fa fa-fw fa-home"></i> Home</a>
-    <a href="#services"><i class="fa fa-fw fa-wrench"></i> Services</a>
-    <a href="#clients"><i class="fa fa-fw fa-user"></i> Clients</a>
-    <a href="#contact"><i class="fa fa-fw fa-envelope"></i> Contact</a>
-</div>
+<nav>
+    <ul>
+        <li>
+            <div class="Grados">
+                <a href=""class="primero">Primero basico </a>
+
+                <a href="" class="segundo">Segundo Básico</a>
+
+                <a href="" class="tercero">Tercero básico</a>
+
+                <a href="" class="cuartp">Cuarto Bachillerato</a>
+
+                <a href=""class="quinto">Quinto Bachillerato</a>
+            </div>
+        </li>
+    </ul>
+</nav>
 
 
-</div>
 
 </body>
 </html>
