MORE shadow and grades list almost ready :3

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
 <nav>
     <ul>
         <li>
+            <div class="subtitulo">
+                <a href=""class="paquetes">PAQUETES</a>
+            </div>
             <div class="Grados">
                 <a href=""class="primero">Primero basico </a>
 
