Working in buttons

--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
         <nav>
             <ul>
                 <li>
-                    <div class="home__container">
-                        <a href="" class="home">Colegio Montano</a>
+                    <div class="Colegio__1">
+                        <a href="" class="colegio">Colegio Montano</a>
                     </div>
 
-                    <div class="text__container">
-                        <h6 class="text">Libros electrónicos</h6>
+                    <div class="Libros__Electronicos">
+                        <h6 class="LB">Libros electrónicos</h6>
                     </div>
                 </li>
                 <li>
-                    <div class="name__container">
-                        <a href="" class="name">John Doe</a>
+                    <div class="Nommbre__John">
+                        <a href="" class="John">John Doe</a>
 
                     </div>
 
-                    <div class="pass__container">
-                        <a href="" class="passwords"> Contraseñas</a>
+                    <div class="Contras__pag">
+                        <a href="" class="contras"> Contraseñas</a>
                     </div>
                 </li>
             </ul>
@@ -40,23 +40,31 @@
 <nav>
     <ul>
         <li>
-            <div class="subtitulo">
-                <a href=""class="paquetes">PAQUETES</a>
-            </div>
+
+
+
             <div class="Grados">
-                <a href=""class="primero">Primero basico </a>
+                <b href=""class="paquetes">PAQUETES</b>
 
-                <a href="" class="segundo">Segundo Básico</a>
+                <a href=""class="primero">Primero basico(7) </a>
 
-                <a href="" class="tercero">Tercero básico</a>
+                <a href="" class="segundo">Segundo Básico (8)</a>
 
-                <a href="" class="cuartp">Cuarto Bachillerato</a>
+                <a href="" class="tercero">Tercero básico (40)</a>
 
-                <a href=""class="quinto">Quinto Bachillerato</a>
+                <a href="" class="cuartp">Cuarto Bachillerato Ciencias y letras (5)</a>
+
+                <a href=""class="quinto">Quinto Bachillerato Ciencias y Letras (5) </a>
             </div>
         </li>
     </ul>
 </nav>
+
+<div class="boton__case">
+
+
+</div>
+
 
 
 
