OMG THERE IS PROGRESS

--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
 </nav>
 
 <div class="boton__case">
-
+    <a class="boton_personalizado" href="">Soy un botón</a>
+    <a class="boton_2" href="">Soy un botón </a>
 
 </div>
 
