--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
 </nav>
 
 <div class="boton__case">
-    <a class="boton_personalizado" href="">Soy un botón</a>
-    <a class="boton_2" href="">Soy un botón </a>
+    <a class="boton_personalizado" href="">Agregar libro</a>
+    <a class="boton_2" href="">Agregar Categoría </a>
 
 </div>
 
