Restarted for doing it in a better way

--- a/index.html
+++ b/index.html
@@ -9,65 +9,44 @@
     </head>
 
     <header>
-        <!-- navigation bar -->
+        <!------------------- navigation bar ----------------------->
         <nav>
             <ul>
                 <li>
-                    <div class="Colegio__1">
-                        <a href="" class="colegio">Colegio Montano</a>
-                    </div>
-
-                    <div class="Libros__Electronicos">
-                        <h6 class="LB">Libros electrónicos</h6>
-                    </div>
+                    <div class="Colegio__1"><a href="" class="colegio">Colegio Montano</a></div>
+                    <div class="Libros__Electronicos"><h6 class="LB">Libros electrónicos</h6></div>
                 </li>
                 <li>
-                    <div class="Nommbre__John">
-                        <a href="" class="John">John Doe</a>
-
-                    </div>
-
-                    <div class="Contras__pag">
-                        <a href="" class="contras"> Contraseñas</a>
-                    </div>
+                    <div class="Nommbre__John"><a href="" class="John">John Doe</a></div>
+                    <div class="Contras__pag"><a href="" class="contras"> Contraseñas</a></div>
                 </li>
             </ul>
         </nav>
+        <!----------------------------- navigation bar ------------------>
     </header>
 
 
 <body>
-<nav>
-    <ul>
-        <li>
+    <div class="Grados">
+        <div class="grados__text">
+            <ul>
+                <h2>PAQUETES</h2>
+                <li class="first">Primero Básico (8)</li>
+                <li class="second">Segundo Básico (12)</li>
+                <li class="third"> Tercero Básico (40)  </li>
+                <li class="fourth"> Cuarto Bachillerato en Ciencias y Letras</li>
+                <li class="fifth">Quinto Bachillerato en Ciencias y Letras </li>
+            </ul>
+        </div>
 
+        <div class="agregar__text">
+            <ul>
+                <li class="at">hola </li>
+            </ul>
 
+        </div>
+        
 
-            <div class="Grados">
-                <b href=""class="paquetes">PAQUETES</b>
-
-                <a href=""class="primero">Primero basico(7) </a>
-
-                <a href="" class="segundo">Segundo Básico (8)</a>
-
-                <a href="" class="tercero">Tercero básico (40)</a>
-
-                <a href="" class="cuartp">Cuarto Bachillerato Ciencias y letras (5)</a>
-
-                <a href=""class="quinto">Quinto Bachillerato Ciencias y Letras (5) </a>
-            </div>
-        </li>
-    </ul>
-</nav>
-
-<div class="boton__case">
-    <a class="boton_personalizado" href="">Agregar libro</a>
-    <a class="boton_2" href="">Agregar Categoría </a>
-
-</div>
-
-
-
-
+    </div>
 </body>
 </html>
