Grades box done

--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
         </div>
 
         <div class="agregar__text">
-            <ul>
-                <li class="at">hola </li>
-            </ul>
+            <div class="cajita">
+                <h4 class="input__text">Agregar Paquete</h4>
+                <input type="text" placeholder="Escribe el nombre aca" class="input__box">
+                <button class="agregar__bptpm">+</button>
+            </div>
 
         </div>
         
