Right buttons done

--- a/index.html
+++ b/index.html
@@ -22,11 +22,12 @@
                 </li>
             </ul>
         </nav>
-        <!----------------------------- navigation bar ------------------>
+        <!----------------------------- navigation bar -------------------------------------->
     </header>
 
 
 <body>
+<!----------------------------- Grades Bar ------------------------------- ------------------>
     <div class="Grados">
         <div class="grados__text">
             <ul>
@@ -47,8 +48,16 @@
             </div>
 
         </div>
-        
-
     </div>
+
+<!----------------------------- 2 buttons --------------------------------------->
+<div class="both__buttons">
+    <div class="right__buttons">
+        <button class="green__button">Agregar Libro</button>
+        <button class="blue__button">Agregar Categoria</button>
+    </div>
+    <!--------------------------------------------------------------------------->
+</div>
+
 </body>
 </html>
