--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 </li>
             </ul>
         </nav>
-        <!----------------------------- navigation bar -------------------------------------->
+        <!----------------------------------------------------------------------------------------->
     </header>
 
 
@@ -56,6 +56,14 @@
         <button class="green__button">Agregar Libro</button>
         <button class="blue__button">Agregar Categoria</button>
     </div>
+    
+    <div class="Primero__Label">
+        <div class="primero__Text">
+            <h1>Primero Básico</h1>
+        </div>
+
+    </div>
+
     <!--------------------------------------------------------------------------->
 </div>
 
