--- a/index.html
+++ b/index.html
@@ -63,8 +63,19 @@
         </div>
 
     </div>
+</div>
 
-    <!--------------------------------------------------------------------------->
+<div class="languages">
+    <div class="select__languages">
+        <ul>
+            <li class="espaniol">
+                <a href="">Idioma Español</a>
+                <a href="">Idioma Inlges</a>
+
+            </li>
+
+        </ul>
+    </div>
 </div>
 
 </body>
