almorst finish languages

--- a/index.html
+++ b/index.html
@@ -68,12 +68,8 @@
 <div class="languages">
     <div class="select__languages">
         <ul>
-            <li class="espaniol">
-                <a href="">Idioma Español</a>
-                <a href="">Idioma Inlges</a>
-
-            </li>
-
+            <li><a href="" class="esp">Idioma Español</a></li>
+            <li><a href="" class="eng">Idioma Ingles</a></li>
         </ul>
     </div>
 </div>
