--- a/index.html
+++ b/index.html
@@ -64,13 +64,30 @@
 
     </div>
 </div>
-
+<!---------------------------------------------------------------------------------------->
 <div class="languages">
     <div class="select__languages">
         <ul>
             <li><a href="" class="esp">Idioma Español</a></li>
             <li><a href="" class="eng">Idioma Ingles</a></li>
         </ul>
+    </div>
+</div>
+<!------------------------------------------------------------------------------------------>
+<div class="book">
+    <div class="book__image" style="background-image: url(https://upload.wikimedia.org/wikipedia/en/0/05/Littleprince.JPG)" ></div>
+    <div class="book__footer">
+        <div class="book__meta">
+            <div class="book__title">
+                El principito
+            </div>
+            <div class="book__size">
+                15mb
+            </div>
+        </div>
+        <div class="book__actions">
+            <button class="book__more"></button>
+        </div>
     </div>
 </div>
 
