Book cards are done

--- a/index.html
+++ b/index.html
@@ -91,5 +91,57 @@
     </div>
 </div>
 
+<div class="book2">
+    <div class="book__image" style="background-image: url(https://image.slidesharecdn.com/serway-1-150418210644-conversion-gate02/95/fsica-serway-1-638.jpg?cb=1429391321)" ></div>
+    <div class="book__footer">
+        <div class="book__meta">
+            <div class="book__title">
+                El principito
+            </div>
+            <div class="book__size">
+                15mb
+            </div>
+        </div>
+        <div class="book__actions">
+            <button class="book__more"></button>
+        </div>
+    </div>
+</div>
+
+
+<div class="book3">
+    <div class="book__image" style="background-image: url(https://i.pinimg.com/originals/ef/7d/42/ef7d42fcc7271394ed0b264b9d089620.jpg)" ></div>
+    <div class="book__footer">
+        <div class="book__meta">
+            <div class="book__title">
+                El principito
+            </div>
+            <div class="book__size">
+                15mb
+            </div>
+        </div>
+        <div class="book__actions">
+            <button class="book__more"></button>
+        </div>
+    </div>
+</div>
+
+<div class="book4">
+    <div class="book__image" style="background-image: url(https://porrua.mx/images/productos/books/codbarl/l9786074427196.jpg   )" ></div>
+    <div class="book__footer">
+        <div class="book__meta">
+            <div class="book__title">
+                El principito
+            </div>
+            <div class="book__size">
+                15mb
+            </div>
+        </div>
+        <div class="book__actions">
+            <button class="book__more"></button>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
