Top Stickers done

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
 
 <body>
-<!----------------------------- Grades Bar ------------------------------- ------------------>
+<!----------------------------- Grades Bar -------------------------------------------------->
     <div class="Grados">
         <div class="grados__text">
             <ul>
@@ -50,21 +50,25 @@
         </div>
     </div>
 
-<!----------------------------- 2 buttons --------------------------------------->
+<!----------------------------------------- 2 buttons --------------------------------------->
+
 <div class="both__buttons">
     <div class="right__buttons">
         <button class="green__button">Agregar Libro</button>
         <button class="blue__button">Agregar Categoria</button>
     </div>
-    
+
+
     <div class="Primero__Label">
         <div class="primero__Text">
             <h1>Primero Básico</h1>
         </div>
+        <img src="pencil.png" class="pencil">
+        <img src="trash1.png" class="trash1">
 
     </div>
 </div>
-<!---------------------------------------------------------------------------------------->
+<!------------------------------------------------------------------------------------------------------------------------------>
 <div class="languages">
     <div class="select__languages">
         <ul>
@@ -73,7 +77,7 @@
         </ul>
     </div>
 </div>
-<!------------------------------------------------------------------------------------------>
+<!-------------------------------------------------------------------------------------------------------------------------------->
 <div class="book">
     <div class="book__image" style="background-image: url(https://upload.wikimedia.org/wikipedia/en/0/05/Littleprince.JPG)" ></div>
     <div class="book__footer">
@@ -90,13 +94,13 @@
         </div>
     </div>
 </div>
-
+<!-------------------------------------------------------------------------------------------------------------------------------->
 <div class="book2">
     <div class="book__image" style="background-image: url(https://image.slidesharecdn.com/serway-1-150418210644-conversion-gate02/95/fsica-serway-1-638.jpg?cb=1429391321)" ></div>
     <div class="book__footer">
         <div class="book__meta">
             <div class="book__title">
-                El principito
+                Fisica
             </div>
             <div class="book__size">
                 15mb
@@ -108,13 +112,13 @@
     </div>
 </div>
 
-
+<!-------------------------------------------------------------------------------------------------------------------------------->
 <div class="book3">
     <div class="book__image" style="background-image: url(https://i.pinimg.com/originals/ef/7d/42/ef7d42fcc7271394ed0b264b9d089620.jpg)" ></div>
     <div class="book__footer">
         <div class="book__meta">
             <div class="book__title">
-                El principito
+                Cálculo
             </div>
             <div class="book__size">
                 15mb
@@ -125,13 +129,13 @@
         </div>
     </div>
 </div>
-
+<!-------------------------------------------------------------------------------------------------------------------------------->
 <div class="book4">
-    <div class="book__image" style="background-image: url(https://porrua.mx/images/productos/books/codbarl/l9786074427196.jpg   )" ></div>
+    <div class="book__image" style="background-image: url(https://porrua.mx/images/productos/books/codbarl/l9786074427196.jpg)"></div>
     <div class="book__footer">
         <div class="book__meta">
             <div class="book__title">
-                El principito
+                Matematica 2
             </div>
             <div class="book__size">
                 15mb
